tests/safety/reject/shift_out_of_range.keel
def main(sys: System); Io:
    println(1 << 64)
